Closed Bug 1933529 Opened 3 months ago Closed 11 days ago

Newly created local subfolders don't inherit their parent's columns and view

Categories

(Thunderbird :: Folder and Message Lists, defect, P3)

Thunderbird 128

Tracking

(thunderbird_esr128+ wontfix, thunderbird134+ wontfix, thunderbird135 wontfix)

RESOLVED FIXED
136 Branch
Tracking Status
thunderbird_esr128 + wontfix
thunderbird134 + wontfix
thunderbird135 --- wontfix

People

(Reporter: KreunYai, Assigned: mkmelin)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:132.0) Gecko/20100101 Firefox/132.0

Steps to reproduce:

I have come from version 60.9.1 (too many bugs subsequently but I've had five peaceful years) and have now done a clean installation of version 128 and only copied over local folders. I am currently using 128.4.3(esr) on WIndows 11.

Actual results:

I am dismayed to find that when I create a new local subfolder, TB no longer copies the parent folder's columns and view properties to the newly created subfolder. My work-around is to copy those properties myself using the apply columns / view feature to the "Local folders" and its children.

Expected results:

What is displayed is the default set of columns and view, which is not what I was expecting as that's not what TB used to do. There seems to be no way of defining what the "default" settings should be either. It's a right pain to have to redo this action frequently as the computer is here for me and not me for the computer. Can you rectify this & put things back as they so sensibly were please?

I've confirmed this behavior on 134.0b1.

Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3

https://mozilla.github.io/mozregression/ should help you find the regression range.

This bug applies to Imap folders as well. When you create a new subfolder whose parent is the Account name, the subfolder does not inherit its properties. During times of poor data connection when access to some servers is inconsistent, mail folders under that imap account (in Imapmail\imap.gmail-3.com for example) can be lost and recreated without their properties. I've had this happen to bin/trash folders the most but it can happen to any online folder.

Easy for local folder. Just add parent flags at https://searchfox.org/comm-central/rev/b14c103d52c97a859175d37f264be38ebb4a4ceb/mailnews/local/src/nsLocalMailFolder.cpp#567. For imap c++, ugh!!

I tested this with v60. Not a regression.

Assignee: nobody → mkmelin+mozilla
Attachment #9463061 - Attachment description: Bug 1933529 - Make newly created local subfolders inherit their parent's view, sortOrder, sortType, columns. r=#thunderbird-reviewers → Bug 1933529 - Make newly created ubfolders inherit their parent's view, sortOrder, sortType, columns. r=#thunderbird-reviewers

I was looking at the wrong flags, so a bit more complicated than I though. But the solution I did will work for all types of accounts.

Status: NEW → ASSIGNED
Attachment #9463061 - Attachment description: Bug 1933529 - Make newly created ubfolders inherit their parent's view, sortOrder, sortType, columns. r=#thunderbird-reviewers → Bug 1933529 - Make newly created ubfolders inherit their parent's view, sortOrder, sortType, columns. r=john.bieling
Target Milestone: --- → 136 Branch

Pushed by kaie@kuix.de:
https://hg.mozilla.org/comm-central/rev/2393e401298b
Make newly created ubfolders inherit their parent's view, sortOrder, sortType, columns. r=john.bieling

Status: ASSIGNED → RESOLVED
Closed: 11 days ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: