Bug 1933529 - Make newly created ubfolders inherit their parent's view, sortOrder, sortType, columns. r=john.bieling

Differential Revision: https://phabricator.services.mozilla.com/D236323