mailnews/base/content/virtualFolderProperties.js
@@ -296,8 +296,9 @@ function onOK(event) {
     // check to see if we already have a folder with the same name and alert the user if so...
     var parentFolder = MailUtils.getOrCreateFolder(uri);
 
-    // sanity check the name based on the logic used by nsMsgBaseUtils.cpp. It can't start with a '.', it can't end with a '.', '~' or ' '.
-    // it can't contain a ';' or '#'.
+    // See ILLEGAL_FOLDER_CHARS. Name can't start with a '.', it can't end with
+    // a '.', '~' or ' '. It can't contain a ';' or '#'.
+    // TODO: these get hashed by NS_MsgHashIfNecessary(). Skip this check here?
     if (/^\.|[\.\~ ]$|[\;\#]/.test(name)) {
       Services.prompt.alert(
         window,
@@ -306,7 +307,8 @@ function onOK(event) {
       );
       event.preventDefault();
       return;
-    } else if (parentFolder.containsChildNamed(name)) {
+    }
+    if (parentFolder.containsChildNamed(name)) {
       Services.prompt.alert(
         window,
         null,
