mail/base/test/browser/browser_folderPaneContext.js
@@ -5,7 +5,6 @@
 const { FeedUtils } = ChromeUtils.importESModule(
   "resource:///modules/FeedUtils.sys.mjs"
 );
-
 const { MessageGenerator } = ChromeUtils.importESModule(
   "resource://testing-common/mailnews/MessageGenerator.sys.mjs"
 );
@@ -88,6 +87,7 @@ const context = about3Pane.document.getElementById("folderPaneContext");
 let account;
 let rootFolder,
   plainFolder,
+  inheritFolder,
   inboxFolder,
   inboxSubfolder,
   junkFolder,
@@ -114,6 +114,21 @@ add_setup(async function () {
   plainFolder = rootFolder
     .createLocalSubfolder("folderPaneContextFolder")
     .QueryInterface(Ci.nsIMsgLocalMailFolder);
+  inheritFolder = rootFolder
+    .createLocalSubfolder("inheritFolder")
+    .QueryInterface(Ci.nsIMsgLocalMailFolder);
+  // Set some flags to non-default so we can test inheriance.
+  inheritFolder.msgDatabase.dBFolderInfo.viewFlags &=
+    ~Ci.nsMsgViewFlagsType.kThreadedDisplay;
+  inheritFolder.msgDatabase.dBFolderInfo.sortType =
+    Ci.nsMsgViewSortType.bySubject;
+  inheritFolder.msgDatabase.dBFolderInfo.sortOrder =
+    Ci.nsMsgViewSortOrder.descending;
+  inheritFolder.msgDatabase.dBFolderInfo.setCharProperty(
+    "columnStates",
+    '{ "abc": true }'
+  );
+
   inboxFolder = rootFolder
     .createLocalSubfolder("folderPaneContextInbox")
     .QueryInterface(Ci.nsIMsgLocalMailFolder);
@@ -416,6 +431,7 @@ add_task(async function testNewRenameDelete() {
           parentInput.menupopup,
           "shown"
         );
+        // Create it under the rootFolder.
         const rootFolderMenu = [...parentInput.menupopup.children].find(
           m => m._folder == rootFolder
         );
@@ -436,6 +452,7 @@ add_task(async function testNewRenameDelete() {
       },
     }
   );
+
   leftClickOn(plainFolder);
   await rightClickAndActivate(plainFolder, "folderPaneContext-new");
   await newFolderPromise;
@@ -445,6 +462,67 @@ add_task(async function testNewRenameDelete() {
   await TestUtils.waitForCondition(
     () => about3Pane.folderPane.getRowForFolder(newFolder, "all"),
     "waiting for folder to appear in the folder tree"
+  );
+
+  const newSubFolderPromise = BrowserTestUtils.promiseAlertDialog(
+    undefined,
+    "chrome://messenger/content/newFolderDialog.xhtml",
+    {
+      async callback(win) {
+        await SimpleTest.promiseFocus(win);
+
+        const doc = win.document;
+        const nameInput = doc.getElementById("name");
+        const parentInput = doc.getElementById("msgNewFolderPicker");
+        const acceptButton = doc.querySelector("dialog").getButton("accept");
+
+        Assert.equal(doc.activeElement, nameInput);
+        Assert.equal(nameInput.value, "");
+        Assert.equal(parentInput.value, inheritFolder.URI);
+        Assert.ok(acceptButton.disabled);
+
+        EventUtils.sendString("inheritA", win);
+        Assert.ok(!acceptButton.disabled);
+        Assert.equal(nameInput.value, "inheritA");
+        acceptButton.click();
+      },
+    }
+  );
+
+  leftClickOn(inheritFolder);
+  await rightClickAndActivate(inheritFolder, "folderPaneContext-new");
+  await newSubFolderPromise;
+
+  const newSubFolder = inheritFolder.getChildNamed("inheritA");
+  Assert.ok(newSubFolder);
+  await TestUtils.waitForCondition(
+    () => about3Pane.folderPane.getRowForFolder(newSubFolder, "all"),
+    "waiting for folder to appear in the folder tree"
+  );
+
+  // Check parent views were set on the subfolder.
+  const parentInfo = inheritFolder.msgDatabase.dBFolderInfo;
+  const newInfo = newSubFolder.msgDatabase.dBFolderInfo;
+
+  Assert.equal(
+    newInfo.viewFlags,
+    parentInfo.viewFlags,
+    "viewFlags should be inherited"
+  );
+  Assert.equal(
+    newInfo.sortType,
+    parentInfo.sortType,
+    "sortType should be inherited"
+  );
+  Assert.equal(
+    newInfo.sortOrder,
+    parentInfo.sortOrder,
+    "sortOrder should be inherited"
+  );
+  Assert.equal(
+    newInfo.getCharProperty("columnStates"),
+    parentInfo.getCharProperty("columnStates"),
+    "columnStates should be inherited"
   );
 
   const renameFolderPromise = BrowserTestUtils.promiseAlertDialog(
